Script that gathers the files for the binary distribution Boogie.zip.

--- a/Binaries/Makefile
+++ b/Binaries/Makefile
@@ -33,3 +33,6 @@ all:
 	copy /y "$(SPECSHARPROOT)\$(SPECSHARPBINDIR)\Microsoft.VisualStudio.Package.pdb"
 	copy /y "$(SPECSHARPROOT)\$(SPECSHARPBINDIR)\ssc.exe"
 	copy /y "$(SPECSHARPROOT)\$(SPECSHARPBINDIR)\ssc.pdb"
+
+zip:
+	.\PrepareBoogieZip.bat
