Updated the frame files to work with the latest Coco/R. This entails *not* having them in this repository because of license issues. Instead, they must be downloaded from http://boogiepartners.codeplex.com/ and then copied into the appropriate directories. Lots of code changes to compensate for the new frame files.

--- a/Source/Core/Makefile
+++ b/Source/Core/Makefile
@@ -1,6 +1,11 @@
 COCO = ..\..\Binaries\Coco.exe
 ASML = ..\..\Binaries\asmlc.boot.exe
 
+# ###############################################################################
+# The frame files are no longer in this directory. They must be downloaded
+# from http://boogiepartners.codeplex.com/ and then copied into this directory.
+# ###############################################################################
+
 # "all" depends on 2 files, really (Parser.cs and Scanner.cs), but they
 # are both generated in one go and I don't know a better way to tell
 # nmake that.  --KRML
@@ -10,7 +15,7 @@ all: Parser.ssc
 #  $(ASML) /target:library Graph.as
   
 Parser.ssc: Scanner.frame Parser.frame BoogiePL.atg
-	$(COCO) BoogiePL.atg
+	$(COCO) BoogiePL.atg -namespace Microsoft.Boogie
 	copy Parser.cs Parser.ssc
 	copy Scanner.cs Scanner.ssc
 
