--- a/Source/Core/Makefile
+++ b/Source/Core/Makefile
@@ -3,8 +3,10 @@ ASML = ..\..\Binaries\asmlc.boot.exe
 
 # ###############################################################################
 # The frame files are no longer in this directory. They must be downloaded
-# from http://boogiepartners.codeplex.com/ and then copied into this directory.
+# from http://boogiepartners.codeplex.com/. Update the FRAME_DIR variable to
+# point to whatever directory you install that into.
 # ###############################################################################
+FRAME_DIR = c:\BoogiePartners\CocoR\Modified
 
 # "all" depends on 2 files, really (Parser.cs and Scanner.cs), but they
 # are both generated in one go and I don't know a better way to tell
@@ -14,8 +16,8 @@ all: Parser.ssc
 #Graph.dll: Graph.as
 #  $(ASML) /target:library Graph.as
   
-Parser.ssc: Scanner.frame Parser.frame BoogiePL.atg
-	$(COCO) BoogiePL.atg -namespace Microsoft.Boogie
+Parser.ssc: $(FRAME_DIR)\Scanner.frame $(FRAME_DIR)\Parser.frame BoogiePL.atg
+	$(COCO) BoogiePL.atg -namespace Microsoft.Boogie -frames $(FRAME_DIR)
 	copy Parser.cs Parser.ssc
 	copy Scanner.cs Scanner.ssc
 
