Fixed project files to point to references correctly and also to remove assembly signing information from AssemblyInfo.cs files (which since that was the only thing in BoogieDriver's assembly info, deleted that file). Now signing information is specified in the project files.

--- a/Source/Provers/Isabelle/Isabelle.csproj
+++ b/Source/Provers/Isabelle/Isabelle.csproj
@@ -12,6 +12,8 @@
     <AssemblyName>Provers.Isabelle</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>InterimKey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -64,6 +66,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Prover.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="InterimKey.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
