<Boogie> Removed references to AssemblyInfo.cs files - unnecessary for the building/execution of the program

--- a/Source/BoogieDriver/BoogieDriver.csproj
+++ b/Source/BoogieDriver/BoogieDriver.csproj
@@ -90,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BoogieDriver.cs" />
+    <Compile Include="version.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AIFramework\AIFramework.sscproj">
