Boogie: Changed how the references in AbsInt are referenced, and fixed a typo in the Spec# version of Z3's ProverInterface.ssc

--- a/Source/AbsInt/AbsInt.csproj
+++ b/Source/AbsInt/AbsInt.csproj
@@ -65,15 +65,15 @@
   <ItemGroup>
     <Reference Include="AIFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=736440c9b414ea16, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Binaries\AIFramework.dll</HintPath>
+      <HintPath>..\AIFramework\bin\debug\AIFramework.dll</HintPath>
     </Reference>
     <Reference Include="Basetypes, Version=2.0.0.0, Culture=neutral, PublicKeyToken=736440c9b414ea16, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Binaries\Basetypes.dll</HintPath>
+      <HintPath>..\Basetypes\bin\debug\Basetypes.dll</HintPath>
     </Reference>
     <Reference Include="Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=736440c9b414ea16, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Binaries\Core.dll</HintPath>
+      <HintPath>..\Core\bin\Debug\Core.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Contracts, Version=1.0.0.0, Culture=neutral, PublicKeyToken=736440c9b414ea16, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
