--- a/Source/BoogieDriver/BoogieDriver.csproj
+++ b/Source/BoogieDriver/BoogieDriver.csproj
@@ -87,10 +87,6 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Z3, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Provers\Z3\bin\Debug\Z3.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BoogieDriver.cs" />
@@ -124,6 +120,10 @@
     <ProjectReference Include="..\Provers\SMTLib\SMTLib.sscproj">
       <Project>{13C3A68C-462A-4CDA-A480-738046E37C5A}</Project>
       <Name>SMTLib</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Provers\Z3\Z3.csproj">
+      <Project>{BB49B90B-BE21-4BE8-85BA-359FDB55F4DF}</Project>
+      <Name>Z3</Name>
     </ProjectReference>
     <ProjectReference Include="..\VCExpr\VCExpr.sscproj">
       <Project>{CF42B700-10AA-4DA9-8992-48A800251C11}</Project>
