--- a/Source/BoogieDriver/BoogieDriver.csproj
+++ b/Source/BoogieDriver/BoogieDriver.csproj
@@ -63,10 +63,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AbsInt, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\AbsInt\bin\Debug\AbsInt.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.Contracts, Version=1.0.0.0, Culture=neutral, PublicKeyToken=736440c9b414ea16, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.SpecSharp, Version=1.0.21125.0, Culture=neutral, PublicKeyToken=736440c9b414ea16, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -93,6 +89,10 @@
     <Compile Include="version.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AbsInt\AbsInt.csproj">
+      <Project>{0EFA3E43-690B-48DC-A72C-384A3EA7F31F}</Project>
+      <Name>AbsInt</Name>
+    </ProjectReference>
     <ProjectReference Include="..\AIFramework\AIFramework.sscproj">
       <Project>{24B55172-AD8B-47D1-8952-5A95CFDB9B31}</Project>
       <Name>AIFramework</Name>
