--- a/Source/Provers/Isabelle/Isabelle.csproj
+++ b/Source/Provers/Isabelle/Isabelle.csproj
@@ -70,7 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Prover.cs" />
-    <Compile Include="version.cs" />
+    <Compile Include="..\..\version.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\AIFramework\AIFramework.sscproj">
