--- a/Source/Provers/SMTLib/SMTLib.csproj
+++ b/Source/Provers/SMTLib/SMTLib.csproj
@@ -13,6 +13,8 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <CodeContractsAssemblyMode>0</CodeContractsAssemblyMode>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\InterimKey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -81,6 +83,7 @@
     <Compile Include="ProverInterface.cs" />
     <Compile Include="SMTLibLineariser.cs" />
     <Compile Include="TypeDeclCollector.cs" />
+    <Compile Include="..\..\version.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\AIFramework\AIFramework.sscproj">
