--- a/Source/VCGeneration/VCGeneration.csproj
+++ b/Source/VCGeneration/VCGeneration.csproj
@@ -14,7 +14,7 @@
     <FileAlignment>512</FileAlignment>
     <CodeContractsAssemblyMode>1</CodeContractsAssemblyMode>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>InterimKey.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\InterimKey.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -86,7 +86,7 @@
     <Compile Include="OrderingAxioms.cs" />
     <Compile Include="VC.cs" />
     <Compile Include="VCDoomed.cs" />
-    <Compile Include="version.cs" />
+    <Compile Include="..\version.cs" />
     <Compile Include="Wlp.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -110,9 +110,6 @@
       <Project>{CF42B700-10AA-4DA9-8992-48A800251C11}</Project>
       <Name>VCExpr</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="InterimKey.snk" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
