--- a/Source/Provers/Z3/Z3.csproj
+++ b/Source/Provers/Z3/Z3.csproj
@@ -95,8 +95,8 @@
       <Project>{47BC34F1-A173-40BE-84C2-9332B4418387}</Project>
       <Name>Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\VCExpr\VCExpr.sscproj">
-      <Project>{CF42B700-10AA-4DA9-8992-48A800251C11}</Project>
+    <ProjectReference Include="..\..\VCExpr\VCExpr.csproj">
+      <Project>{56FFDBCA-7D14-43B8-A6CA-22A20E417EE1}</Project>
       <Name>VCExpr</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\VCGeneration\VCGeneration.csproj">
